<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dp_195"
    android:layout_height="@dimen/dp_185"
    android:background="@drawable/shape_login_bg"
    android:orientation="vertical">

    <ImageView
        android:layout_width="@dimen/dp_45"
        android:layout_height="@dimen/dp_45"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_20"
        android:src="@drawable/lose_key" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_20"
        android:text="@string/lose_password_tips"
        android:textColor="@color/black303133"
        android:textSize="@dimen/sp_10" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_20"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_administrator"
            android:textColor="@color/black303133"
            android:textSize="@dimen/sp_10" />

        <TextView
            android:id="@+id/tv_contact_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_5"
            android:text="@string/administrator_number"
            android:textColor="@color/blue003C00"
            android:textSize="@dimen/sp_10" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginRight="@dimen/dp_20"
        android:text="@string/lose_password_hint"
        android:textSize="@dimen/sp_7" />

    <Button
        android:id="@+id/btn_i_know"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_20"
        android:background="@drawable/shape_login_btn_yellow_radius_5"
        android:text="@string/i_know"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/sp_8" />
</LinearLayout>