<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dp_194"
    android:layout_height="@dimen/dp_200"
    android:background="@drawable/normal_item_bac"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_17"
        android:gravity="center_horizontal"
        android:text="@string/change_password"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_13"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_origin_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_23"
        android:layout_marginRight="@dimen/dp_23"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@null"
        android:hint="@string/input_origin_password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="#C1C1C1"
        android:textSize="@dimen/sp_8" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0_5"
        android:layout_marginLeft="@dimen/dp_23"
        android:layout_marginRight="@dimen/dp_23"
        android:layout_marginTop="@dimen/dp_5"
        android:background="#F2F2F2" />

    <EditText
        android:id="@+id/et_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_23"
        android:layout_marginRight="@dimen/dp_23"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@null"
        android:hint="@string/input_new_password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="#C1C1C1"
        android:textSize="@dimen/sp_8" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0_5"
        android:layout_marginLeft="@dimen/dp_23"
        android:layout_marginRight="@dimen/dp_23"
        android:layout_marginTop="@dimen/dp_5"
        android:background="#F2F2F2" />

    <EditText
        android:id="@+id/et_new_password_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_23"
        android:layout_marginRight="@dimen/dp_23"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@null"
        android:hint="@string/input_new_password_again"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="#C1C1C1"
        android:textSize="@dimen/sp_8" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0_5"
        android:layout_marginLeft="@dimen/dp_23"
        android:layout_marginRight="@dimen/dp_23"
        android:layout_marginTop="@dimen/dp_5"
        android:background="#F2F2F2" />

    <Button
        android:id="@+id/bt_change"
        android:layout_width="@dimen/dp_148"
        android:layout_height="@dimen/dp_20"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_10"
        android:textSize="@dimen/sp_8"
        android:background="@drawable/change_password_btn_gray"
        android:text="@string/change_password"
        android:textColor="#BBBBBB"
        />

    <TextView
        android:id="@+id/tv_back"
        android:layout_marginTop="@dimen/dp_14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textColor="#4E96FB"
        android:textSize="@dimen/sp_7"
        android:layout_gravity="center_horizontal"
        android:drawableLeft="@drawable/left_arrow"

        />
</LinearLayout>